--- a/Proyecto Integrador/estilos.css
+++ b/Proyecto Integrador/estilos.css
@@ -85,15 +85,25 @@ a {
 }
 
 .botonTraductor{
-	padding: 7px;
+	padding: 8px;
 	color: #fff;
 	background-color: #1dc983 ;
 	text-align: center;
-	font-size: 16px;
-	float: right;
+	font-size: 14px;
 	position: fixed;
-	margin-top: 2.5px;
-	margin-left: 1050px;
+	top: 20px;
+	right: 10px;
+	color:  #000;
+}
+.botonSubir{
+	padding: 8px;
+	color: #fff;
+	background-color: #1dc983 ;
+	text-align: center;
+	font-size: 14px;
+	position: fixed;
+	top: 60px;
+	right: 10px;
 	color:  #000;
 }
 
@@ -157,7 +167,7 @@ a {
 
 }
 
-/* Submenu*/
+/* ---------- Submenu ----------*/
 
 .submenu{
 	position: absolute;
@@ -180,11 +190,8 @@ a {
 .menu li:hover .submenu{
 	visibility: visible;
 	opacity: 1;
-	font-size: 10px;
 	
 }
-
-
 
 span{
 	font-size: 30px;
@@ -201,11 +208,14 @@ span{
 
 .articulo .contenedor-texto {
 	padding: 20px;
-	width: 50%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	
 	width: 100%;
+}
+.extracto {
+	padding: 20px;
+	flex-direction: column;
 }
 
 .articulo .contenedor-thumbnail {
@@ -234,6 +244,7 @@ span{
 	font-weight: 300;
 	margin-bottom: 20px; 
 	color:#000 ;
+
 }
 
 /* ---------- Articulo Destacado ----------*/
@@ -293,13 +304,14 @@ span{
 	grid-area: contenido;
 	display: grid;
 	grid-template-columns: 1;
-	grid-gap: 20px; 
+	grid-gap: 10px; 
 }
 
 /*---------- SIDEBAR ----------*/
 .sidebar {
-	padding: 5em 25px; 
+	padding: 5em ; 
 	text-align: center;
+	margin-left: 40px;
 	min-height: 100px; 
 	grid-area: aside;
 	background: #000;
@@ -352,7 +364,7 @@ span{
 
 
 
-@media only screen and (max-width:  800px){
+@media only screen and (max-width:  1100px){
 	.menu-icon{
 		display: block;
 		cursor: pointer;
@@ -371,5 +383,24 @@ span{
 	.menu ul li {
 		display: block;
 		margin-left: 0px;
+	}
+
+	.menu li:hover .submenu{
+	visibility: hidden;
+	opacity: 1;
+	}
+	.contenedor{
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(5, auto);
+	grid-template-areas:
+		'header			header   	header'
+		'destacado		destacado 	destacado'
+		'contenido		contenido 	contenido'
+		'aside 			aside 		aside'
+		'footer	 		footer 		footer';
+	}
+
+	img {
+	display: none;
 	}
 }
